--- a/index.css
+++ b/index.css
@@ -1,9 +1,16 @@
+.body {
+    background-color:black;
+}
+
+
+
+
 .header { 
-    background-color: #4E3D42;
+    background-color: rgb(208,192,197);
     margin: 10px 30px 10px 30px;
     display: flex;
     justify-content: space-between;
-
+    border-radius: 10px;
 }
 
 
@@ -18,9 +25,76 @@
 } 
 
 .Nav ul li a {
-    color: white;
-    font-size: 20px;
+    color: black;
+    font-size: 25px;
     padding: 10px;
+    text-decoration: none;
+}
+
+.Contenedor {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
+.recuadro {
+    width: 50%;
+    height: 60%;
+    background: rgb(208,192,197);
+    border-radius: 20px;    
+    display: flex;
+}
+
+.ContenedorTexto {
+    width: 40%;
+    display: inline-block;
+    text-align: center;
+    justify-content: center;
+
+}
+
+.h2 { 
+    margin-top: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    color: #4F6272;
+}
+
+.texto {
+    margin: 50px 0px 15px 15px;
+    font-size: 25px;
+    font-style:normal;
+}
+
+.botonplanes {
+    margin-top: 50px;
+    background-color: black;
+    color: white;
+    border: none;
+    height: 40px;
+    width: 30%;
+    border-radius: 10px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+.Trabajos {
+    margin-top: 40px;
+    background-color: black;
+    color: white;
+    border: none;
+    height: 40px;
+    width: 30%;
+    border-radius: 10px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+.imagen {
+    width: 60%;
+    background-image: url(./fiesta.jpg);
+    background-position: left;
+}
