--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@
     background-color: black;
     color: white;
     border: none;
-    height: 40px;
+    height: 20px;
     width: 30%;
     border-radius: 10px;
     font-family: 'Roboto', sans-serif;
@@ -95,8 +95,9 @@
 }
 
 .imagen {
-    width: 60%;
+    width: 50%;
+    margin: 10px 10px 10px 20px;
     background-image: url(./fiesta.jpg);
-    background-position:left;
     background-repeat: no-repeat;
+    border-radius: 10px;
 }
