--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@
     height: 60%;
     background: rgb(208,192,197);
     border-radius: 20px;    
-    display: flex;
+    display: inline-flex;
 }
 
 .ContenedorTexto {
@@ -86,12 +86,12 @@
     background-color: black;
     color: white;
     border: none;
-    height: 20px;
+    height: 40px;
     width: 30%;
     border-radius: 10px;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    flex-direction: wrap;
+   
 }
 
 .imagen {
